@@ -1,201 +1,462 @@
-Run caixagithub/DevSecOps-Actions/.github/integrations/apim/import/dotnet@main
-Run curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-Get:1 http://security.ubuntu.com/ubuntu noble-security InRelease [126 kB]
-Get:2 http://archive.ubuntu.com/ubuntu noble InRelease [256 kB]
-Get:3 http://security.ubuntu.com/ubuntu noble-security/main amd64 Packages [1022 kB]
-Get:4 http://security.ubuntu.com/ubuntu noble-security/universe amd64 Packages [1490 kB]
-Get:5 http://security.ubuntu.com/ubuntu noble-security/multiverse amd64 Packages [43.8 kB]
-Get:6 http://security.ubuntu.com/ubuntu noble-security/restricted amd64 Packages [1417 kB]
-Get:7 http://archive.ubuntu.com/ubuntu noble-updates InRelease [126 kB]
-Get:8 https://ppa.launchpadcontent.net/git-core/ppa/ubuntu noble InRelease [24.3 kB]
-Get:9 http://archive.ubuntu.com/ubuntu noble-backports InRelease [126 kB]
-Get:10 http://archive.ubuntu.com/ubuntu noble/main amd64 Packages [1808 kB]
-Get:11 http://archive.ubuntu.com/ubuntu noble/multiverse amd64 Packages [331 kB]
-Get:12 http://archive.ubuntu.com/ubuntu noble/universe amd64 Packages [19.3 MB]
-Get:13 http://archive.ubuntu.com/ubuntu noble/restricted amd64 Packages [117 kB]
-Get:14 http://archive.ubuntu.com/ubuntu noble-updates/multiverse amd64 Packages [49.5 kB]
-Get:15 http://archive.ubuntu.com/ubuntu noble-updates/universe amd64 Packages [2111 kB]
-Get:16 http://archive.ubuntu.com/ubuntu noble-updates/restricted amd64 Packages [1490 kB]
-Get:17 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 Packages [1342 kB]
-Get:18 http://archive.ubuntu.com/ubuntu noble-backports/main amd64 Packages [48.9 kB]
-Get:19 http://archive.ubuntu.com/ubuntu noble-backports/universe amd64 Packages [35.9 kB]
-Get:20 http://archive.ubuntu.com/ubuntu noble-backports/multiverse amd64 Packages [671 B]
-Get:21 https://ppa.launchpadcontent.net/git-core/ppa/ubuntu noble/main amd64 Packages [2988 B]
-Fetched 31.3 MB in 3s (10.9 MB/s)
-Reading package lists...
-Reading package lists...
-Building dependency tree...
-Reading state information...
-lsb-release is already the newest version (12.0-2).
-The following additional packages will be installed:
-  dirmngr gnupg-utils gpgsm keyboxd libcurl3t64-gnutls libcurl4t64 libksba8
-Suggested packages:
-  dbus-user-session pinentry-gnome3 tor parcimonie xloadimage gpg-wks-server
-Recommended packages:
-  gnupg-l10n gpg-wks-client
-The following NEW packages will be installed:
-  apt-transport-https dirmngr gnupg gnupg-utils gpgsm keyboxd libksba8
-The following packages will be upgraded:
-  ca-certificates curl libcurl3t64-gnutls libcurl4t64
-4 upgraded, 7 newly installed, 0 to remove and 22 not upgraded.
-Need to get 2270 kB of archives.
-After this operation, 2660 kB of additional disk space will be used.
-Get:1 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 ca-certificates all 20260601~24.04.1 [139 kB]
-Get:2 http://archive.ubuntu.com/ubuntu noble-updates/universe amd64 apt-transport-https all 2.8.3 [3970 B]
-Get:3 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 curl amd64 8.5.0-2ubuntu10.10 [227 kB]
-Get:4 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 libcurl4t64 amd64 8.5.0-2ubuntu10.10 [343 kB]
-Get:5 http://archive.ubuntu.com/ubuntu noble/main amd64 libksba8 amd64 1.6.6-1build1 [122 kB]
-Get:6 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 dirmngr amd64 2.4.4-2ubuntu17.4 [323 kB]
-Get:7 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 gnupg-utils amd64 2.4.4-2ubuntu17.4 [109 kB]
-Get:8 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 gpgsm amd64 2.4.4-2ubuntu17.4 [232 kB]
-Get:9 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 keyboxd amd64 2.4.4-2ubuntu17.4 [78.3 kB]
-Get:10 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 gnupg all 2.4.4-2ubuntu17.4 [359 kB]
-Get:11 http://archive.ubuntu.com/ubuntu noble-updates/main amd64 libcurl3t64-gnutls amd64 8.5.0-2ubuntu10.10 [335 kB]
-debconf: delaying package configuration, since apt-utils is not installed
-Fetched 2270 kB in 0s (15.0 MB/s)
-(Reading database ... 
-(Reading database ... 5%
-(Reading database ... 10%
-(Reading database ... 15%
-(Reading database ... 20%
-(Reading database ... 25%
-(Reading database ... 30%
-(Reading database ... 35%
-(Reading database ... 40%
-(Reading database ... 45%
-(Reading database ... 50%
-(Reading database ... 55%
-(Reading database ... 60%
-(Reading database ... 65%
-(Reading database ... 70%
-(Reading database ... 75%
-(Reading database ... 80%
-(Reading database ... 85%
-(Reading database ... 90%
-(Reading database ... 95%
-(Reading database ... 100%
-(Reading database ... 14358 files and directories currently installed.)
-Preparing to unpack .../00-ca-certificates_20260601~24.04.1_all.deb ...
-Unpacking ca-certificates (20260601~24.04.1) over (20240203) ...
-Selecting previously unselected package apt-transport-https.
-Preparing to unpack .../01-apt-transport-https_2.8.3_all.deb ...
-Unpacking apt-transport-https (2.8.3) ...
-Preparing to unpack .../02-curl_8.5.0-2ubuntu10.10_amd64.deb ...
-Unpacking curl (8.5.0-2ubuntu10.10) over (8.5.0-2ubuntu10.9) ...
-Preparing to unpack .../03-libcurl4t64_8.5.0-2ubuntu10.10_amd64.deb ...
-Unpacking libcurl4t64:amd64 (8.5.0-2ubuntu10.10) over (8.5.0-2ubuntu10.9) ...
-Selecting previously unselected package libksba8:amd64.
-Preparing to unpack .../04-libksba8_1.6.6-1build1_amd64.deb ...
-Unpacking libksba8:amd64 (1.6.6-1build1) ...
-Selecting previously unselected package dirmngr.
-Preparing to unpack .../05-dirmngr_2.4.4-2ubuntu17.4_amd64.deb ...
-Unpacking dirmngr (2.4.4-2ubuntu17.4) ...
-Selecting previously unselected package gnupg-utils.
-Preparing to unpack .../06-gnupg-utils_2.4.4-2ubuntu17.4_amd64.deb ...
-Unpacking gnupg-utils (2.4.4-2ubuntu17.4) ...
-Selecting previously unselected package gpgsm.
-Preparing to unpack .../07-gpgsm_2.4.4-2ubuntu17.4_amd64.deb ...
-Unpacking gpgsm (2.4.4-2ubuntu17.4) ...
-Selecting previously unselected package keyboxd.
-Preparing to unpack .../08-keyboxd_2.4.4-2ubuntu17.4_amd64.deb ...
-Unpacking keyboxd (2.4.4-2ubuntu17.4) ...
-Selecting previously unselected package gnupg.
-Preparing to unpack .../09-gnupg_2.4.4-2ubuntu17.4_all.deb ...
-Unpacking gnupg (2.4.4-2ubuntu17.4) ...
-Preparing to unpack .../10-libcurl3t64-gnutls_8.5.0-2ubuntu10.10_amd64.deb ...
-Unpacking libcurl3t64-gnutls:amd64 (8.5.0-2ubuntu10.10) over (8.5.0-2ubuntu10.9) ...
-Setting up libksba8:amd64 (1.6.6-1build1) ...
-Setting up apt-transport-https (2.8.3) ...
-Setting up libcurl4t64:amd64 (8.5.0-2ubuntu10.10) ...
-Setting up gpgsm (2.4.4-2ubuntu17.4) ...
-Setting up libcurl3t64-gnutls:amd64 (8.5.0-2ubuntu10.10) ...
-Setting up dirmngr (2.4.4-2ubuntu17.4) ...
-Created symlink /etc/systemd/user/sockets.target.wants/dirmngr.socket → /usr/lib/systemd/user/dirmngr.socket.
+Starting: Maven
+==============================================================================
+Task         : Maven
+Description  : Build, test, and deploy with Apache Maven
+Version      : 3.225.0
+Author       : Microsoft Corporation
+Help         : https://docs.microsoft.com/azure/devops/pipelines/tasks/build/maven
+==============================================================================
+/opt/apache-maven/apache-maven-3.8.5/bin/mvn -version
+Apache Maven 3.8.5 (3599d3414f046de2324203b78ddcf9b5e4388aa0)
+Maven home: /opt/apache-maven/apache-maven-3.8.5
+Java version: 21.0.5, vendor: Red Hat, Inc., runtime: /usr/java/open-jdk-21.0.5
+Default locale: pt_BR, platform encoding: UTF-8
+OS name: "linux", version: "5.18.5-100.fc35.x86_64", arch: "amd64", family: "unix"
+/opt/apache-maven/apache-maven-3.8.5/bin/mvn -f /opt/ads-agent/_work/47/s/pom.xml clean package -U
+[INFO] Scanning for projects...
+[INFO] 
+[INFO] -----------------< br.gov.br:simtx.arrecadacoes.barra >-----------------
+[INFO] Building simtx.arrecadacoes.barra 1.0.0-SNAPSHOT
+[INFO] ------------------------------[ quarkus ]-------------------------------
+[WARNING] The artifact io.quarkus:quarkus-junit5:jar:3.33.2 has been relocated to io.quarkus:quarkus-junit:jar:3.33.2: Update the artifactId in your project build file. Refer to https://github.com/quarkusio/quarkus/wiki/Migration-Guide-3.31 for more information.
+[INFO] 
+[INFO] --- maven-clean-plugin:2.5:clean (default-clean) @ simtx.arrecadacoes.barra ---
+[INFO] Deleting /opt/ads-agent/_work/47/s/target
+[INFO] 
+[INFO] --- jacoco-maven-plugin:0.8.14:prepare-agent (prepare-jacoco-agent) @ simtx.arrecadacoes.barra ---
+[INFO] argLine set to -javaagent:/opt/ads-agent/cache-tools/.m2/repository/org/jacoco/org.jacoco.agent/0.8.14/org.jacoco.agent-0.8.14-runtime.jar=destfile=/opt/ads-agent/_work/47/s/target/jacoco.exec --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-exports=java.base/jdk.internal.module=ALL-UNNAMED
+[INFO] 
+[INFO] --- maven-resources-plugin:3.3.1:resources (default-resources) @ simtx.arrecadacoes.barra ---
+[INFO] Copying 2 resources from src/main/resources to target/classes
+[INFO] 
+[INFO] --- quarkus-maven-plugin:3.33.2.SP1-redhat-00001:generate-code (default-generate-code) @ simtx.arrecadacoes.barra ---
+Downloading from Nexus Caixa: http://binario.caixa:8081/repository/caixa-group-br/br/gov/br/simtx.arrecadacoes.barra/1.0.0-SNAPSHOT/maven-metadata.xml
+[INFO] [io.quarkiverse.cxf.deployment.codegen.Wsdl2JavaCodeGen] wsdl2java processed 0 WSDL files under src/main/resources
+[INFO] 
+[INFO] --- quarkus-maven-plugin:3.33.2.SP1-redhat-00001:generate-code (default) @ simtx.arrecadacoes.barra ---
+[INFO] [io.quarkiverse.cxf.deployment.codegen.Wsdl2JavaCodeGen] wsdl2java processed 0 WSDL files under src/main/resources
+[INFO] 
+[INFO] --- maven-compiler-plugin:3.15.0:compile (default-compile) @ simtx.arrecadacoes.barra ---
+[INFO] Recompiling the module because of changed source code.
 
-Setting up ca-certificates (20260601~24.04.1) ...
-Updating certificates in /etc/ssl/certs...
-rehash: warning: skipping duplicate certificate in Autoridad_de_Certificacion_Firmaprofesional_CIF_A62634068_2.pem
-rehash: warning: skipping ca-certificates.crt,it does not contain exactly one certificate or CRL
-121 added, 0 removed; done.
-Setting up keyboxd (2.4.4-2ubuntu17.4) ...
-Created symlink /etc/systemd/user/sockets.target.wants/keyboxd.socket → /usr/lib/systemd/user/keyboxd.socket.
 
-Setting up curl (8.5.0-2ubuntu10.10) ...
-Setting up gnupg-utils (2.4.4-2ubuntu17.4) ...
-Setting up gnupg (2.4.4-2ubuntu17.4) ...
-Processing triggers for libc-bin (2.39-0ubuntu8.7) ...
-Processing triggers for ca-certificates (20260601~24.04.1) ...
-Updating certificates in /etc/ssl/certs...
-0 added, 0 removed; done.
-Running hooks in /etc/ca-certificates/update.d...
-done.
-Types: deb
-URIs: https://packages.microsoft.com/repos/azure-cli/
-Suites: noble
-Components: main
-Architectures: amd64
-Signed-by: /etc/apt/keyrings/microsoft.gpg
-Get:1 https://packages.microsoft.com/repos/azure-cli noble InRelease [3564 B]
-Get:2 https://packages.microsoft.com/repos/azure-cli noble/main amd64 Packages [2314 B]
-Hit:3 http://security.ubuntu.com/ubuntu noble-security InRelease
-Hit:4 http://archive.ubuntu.com/ubuntu noble InRelease
-Hit:5 http://archive.ubuntu.com/ubuntu noble-updates InRelease
-Hit:6 http://archive.ubuntu.com/ubuntu noble-backports InRelease
-Hit:7 https://ppa.launchpadcontent.net/git-core/ppa/ubuntu noble InRelease
-Fetched 5878 B in 1s (6532 B/s)
-Reading package lists...
-Reading package lists...
-Building dependency tree...
-Reading state information...
-The following NEW packages will be installed:
-  azure-cli
-0 upgraded, 1 newly installed, 0 to remove and 22 not upgraded.
-Need to get 56.2 MB of archives.
-After this operation, 598 MB of additional disk space will be used.
-Get:1 https://packages.microsoft.com/repos/azure-cli noble/main amd64 azure-cli amd64 2.88.0-1~noble [56.2 MB]
-debconf: delaying package configuration, since apt-utils is not installed
-Fetched 56.2 MB in 0s (177 MB/s)
-Selecting previously unselected package azure-cli.
-(Reading database ... 
-(Reading database ... 5%
-(Reading database ... 10%
-(Reading database ... 15%
-(Reading database ... 20%
-(Reading database ... 25%
-(Reading database ... 30%
-(Reading database ... 35%
-(Reading database ... 40%
-(Reading database ... 45%
-(Reading database ... 50%
-(Reading database ... 55%
-(Reading database ... 60%
-(Reading database ... 65%
-(Reading database ... 70%
-(Reading database ... 75%
-(Reading database ... 80%
-(Reading database ... 85%
-(Reading database ... 90%
-(Reading database ... 95%
-(Reading database ... 100%
-(Reading database ... 14433 files and directories currently installed.)
-Preparing to unpack .../azure-cli_2.88.0-1~noble_amd64.deb ...
-Unpacking azure-cli (2.88.0-1~noble) ...
-Setting up azure-cli (2.88.0-1~noble) ...
-WARNING: The detected architecture of current device is "x86_64", and the binary for "amd64" will be downloaded. If the detection is wrong, please download and install the binary corresponding to the appropriate architecture.
-WARNING: No version specified, will get the latest version of kubectl from "https://dl.k8s.io/release/stable.txt"
-WARNING: Downloading client to "/usr/local/bin/kubectl" from "https://dl.k8s.io/release/v1.36.2/bin/linux/amd64/kubectl"
-WARNING: Please ensure that /usr/local/bin is in your search PATH, so the `kubectl` command can be found.
-WARNING: No version specified, will get the latest version of kubelogin from "https://api.github.com/repos/Azure/kubelogin/releases/latest"
-WARNING: Downloading client to "/tmp/tmpergk_ru6/kubelogin.zip" from "https://github.com/Azure/kubelogin/releases/download/v0.2.19/kubelogin.zip"
-WARNING: Moving binary to "/usr/local/bin/kubelogin" from "/tmp/tmpergk_ru6/bin/linux_amd64/kubelogin"
-WARNING: Please ensure that /usr/local/bin is in your search PATH, so the `kubelogin` command can be found.
-Run az login --identity --client-id *** --output none
-Run set -x  # Ativa o modo de depuração
-+ echo 'Iniciando a publicação da API para APIM...'
-+ swaggerUrl=http://sirmc-api-trilhas-carga.apl.des-nprd.private.azure/swagger/v1/swagger.json
-Iniciando a publicação da API para APIM...
-Verificando a URL do Swagger: http://sirmc-api-trilhas-carga.apl.des-nprd.private.azure/swagger/v1/swagger.json
-+ echo 'Verificando a URL do Swagger: http://sirmc-api-trilhas-carga.apl.des-nprd.private.azure/swagger/v1/swagger.json'
-++ curl -k --max-time 10 --write-out '%{http_code}' --silent --output /dev/null http://sirmc-api-trilhas-carga.apl.des-nprd.private.azure/swagger/v1/swagger.json
-+ httpStatus=000
-Error: Process completed with exit code 6.
+
+o pom do xml ta assim:
+
+
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>br.gov.br</groupId>
+    <artifactId>simtx.arrecadacoes.barra</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <packaging>quarkus</packaging>
+
+    <properties>
+        <compiler-plugin.version>3.15.0</compiler-plugin.version>
+        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
+        <maven.compiler.release>21</maven.compiler.release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
+        <quarkus.platform.group-id>com.redhat.quarkus.platform</quarkus.platform.group-id>
+        <quarkus.platform.version>3.33.2.SP1-redhat-00001</quarkus.platform.version>
+        <skipITs>true</skipITs>
+        <surefire-plugin.version>3.5.6</surefire-plugin.version>
+        <lombok.version>1.18.46</lombok.version>
+        <applicationinsights-agent.version>3.7.8</applicationinsights-agent.version>
+        <SIMTX-lib-processos-assinatura-multipla.version>1.4.0.0</SIMTX-lib-processos-assinatura-multipla.version>
+        <simtx-lib-core.version>0.0.0.98</simtx-lib-core.version>
+    </properties>
+
+    <repositories>
+        <repository>
+            <id>red-hat-enterprise-maven-repository</id>
+            <url>https://maven.repository.redhat.com/ga/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>red-hat-enterprise-maven-repository</id>
+            <url>https://maven.repository.redhat.com/ga/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${quarkus.platform.group-id}</groupId>
+                <artifactId>${quarkus.platform.artifact-id}</artifactId>
+                <version>${quarkus.platform.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>br.gov.caixa.simtx.lib.core</groupId>
+            <artifactId>SIMTX-lib-core</artifactId>
+            <version>${simtx-lib-core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>br.gov.caixa.simtx.lib.assinaturamultipla</groupId>
+            <artifactId>SIMTX-lib-processos-assinatura-multipla</artifactId>
+            <version>${SIMTX-lib-processos-assinatura-multipla.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>applicationinsights-agent</artifactId>
+            <version>${applicationinsights-agent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-context-propagation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-jwt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-openapi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-health</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-fault-tolerance</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.slf4j</groupId>
+            <artifactId>slf4j-jboss-logmanager</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-oidc-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client-jackson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client-oidc-filter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-jackson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-oidc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jackson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-orm-panache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jdbc-oracle</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-arc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-orm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-messaging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.smallrye.reactive</groupId>
+            <artifactId>smallrye-reactive-messaging-jms</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.smallrye.reactive</groupId>
+            <artifactId>smallrye-reactive-messaging-jackson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.mq</groupId>
+            <artifactId>com.ibm.mq.jakarta.client</artifactId>
+            <version>9.4.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.messaginghub</groupId>
+            <artifactId>pooled-jms</artifactId>
+            <version>3.1.7.redhat-00001</version>
+        </dependency>
+        <dependency>
+            <groupId>io.smallrye.config</groupId>
+            <artifactId>smallrye-config-source-file-system</artifactId>
+            <version>3.13.4.redhat-00001</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.cxf</groupId>
+            <artifactId>quarkus-cxf-rt-features-metrics</artifactId>
+            <version>3.33.8</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.openapi.generator</groupId>
+            <artifactId>quarkus-openapi-generator</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.openapi.generator</groupId>
+            <artifactId>quarkus-openapi-generator-oidc</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jdbc-h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-test-h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jacoco</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>3.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.instancio</groupId>
+            <artifactId>instancio-junit</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>${quarkus.platform.group-id}</groupId>
+                <artifactId>quarkus-maven-plugin</artifactId>
+                <version>${quarkus.platform.version}</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>generate-code</goal>
+                            <goal>generate-code-tests</goal>
+                            <goal>native-image-agent</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${compiler-plugin.version}</version>
+                <configuration>
+                    <parameters>true</parameters>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <systemPropertyVariables>
+                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                        <maven.home>${maven.home}</maven.home>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-jacoco-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>generate-jacoco-report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/jacoco-report</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${surefire-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <systemPropertyVariables>
+                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
+                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                        <maven.home>${maven.home}</maven.home>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>native</id>
+            <activation>
+                <property>
+                    <name>native</name>
+                </property>
+            </activation>
+            <properties>
+                <quarkus.package.jar.enabled>false</quarkus.package.jar.enabled>
+                <skipITs>false</skipITs>
+                <quarkus.native.enabled>true</quarkus.native.enabled>
+            </properties>
+        </profile>
+        <profile>
+            <id>local</id>
+            <dependencies>
+                <dependency>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-jdbc-h2</artifactId>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-test-h2</artifactId>
+                    <scope>compile</scope>
+                </dependency>
+            </dependencies>
+            <properties>
+                <quarkus.profile>local</quarkus.profile>
+            </properties>
+        </profile>
+    </profiles>
+</project>
+
+
+application.properties ta assim:
+
+
+# LOGGING
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c] (%t) %s%e%n
+quarkus.log.console.level=${LOG_LEVEL:DEBUG}
+quarkus.log.category."br.gov.caixa.simtx".level=${LOG_LEVEL:DEBUG}
+
+# BANNER
+quarkus.banner.path=banner.txt
+
+# API DOCUMENTATION
+quarkus.smallrye-openapi.store-schema-directory=target/openapi
+mp.openapi.extensions.smallrye.openapi=3.0.3
+
+# DATABASE
+quarkus.datasource.db-kind=${DB}
+quarkus.datasource.jdbc.url=${DB_URL}
+quarkus.datasource.username=${DB_USER}
+quarkus.datasource.password=${PASS_DB}
+quarkus.hibernate-orm.database.default-schema=${DB_SCHEMA}
+
+# CACHE - HIBERNATE 2ND LEVEL
+quarkus.hibernate-orm.cache."br.gov.caixa.simtx.comum.transacional.persistence.entity.Mtxtb006MensagemEntity".expiration.max-idle=${DB_CACHE_TABELA_MTXTB006_MENSAGEM_TIME}
+quarkus.hibernate-orm.cache."br.gov.caixa.simtx.comum.transacional.persistence.entity.Mtxtb001ServicoEntity".expiration.max-idle=${DB_CACHE_TABELA_MTXTB001_SERVICO_TIME}
+quarkus.hibernate-orm.cache."br.gov.caixa.simtx.comum.transacional.persistence.entity.Mtxtb023ParametroEntity".expiration.max-idle=${DB_CACHE_TABELA_MTXTB023_PARAMETRO_SISTEMA_TIME}
+quarkus.hibernate-orm.cache."br.gov.caixa.simtx.comum.transacional.persistence.entity.Mtxtb013PrmtoSrvcoCanalEntity".expiration.max-idle=${DB_CACHE_TABELA_MTXTB013_PRMTO_SRVCO_CANAL_TIME}
+quarkus.cache.caffeine.servico-cache.expire-after-write=${CACHE_CAFFEINE_MAX_EXPIRATION}
+
+simtx.clock.timezone=America/Sao_Paulo
+
+
+
+
+e uma build nova nunc asubiu a pipiline accho que tem probele no repositori deles
+
+
